Details, hoping to fix occasional 'file deleted already' error.